--- a/test/tune_augmentor.ipynb
+++ b/test/tune_augmentor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,123 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = utils.df_fromdir('brain')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tuner.utils' has no attribute 'load_df'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-9b1b1c52f2d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tuner.utils' has no attribute 'load_df'"
+     ]
+    }
+   ],
+   "source": [
+    "utils.load_df(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tuner.utils' has no attribute 'train_val_split_df'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-00830ca30138>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrain_val_split_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'tuner.utils' has no attribute 'train_val_split_df'"
+     ]
+    }
+   ],
+   "source": [
+    "utils.train_val_split_df(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from easydict import EasyDict\n",
+    "test = EasyDict({\n",
+    "    'srcdir': '../examples/micin-dataset/brain'\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tuner import load_data\n",
+    "\n",
+    "load_data.format_dataset_brain('brain', 'new')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<unknown>, line 102)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[1;32m\"/home/fytroo/anaconda3/lib/python3.6/site-packages/IPython/core/interactiveshell.py\"\u001b[0m, line \u001b[1;32m2862\u001b[0m, in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \u001b[1;32m\"<ipython-input-57-b69a4845d2f7>\"\u001b[0m, line \u001b[1;32m3\u001b[0m, in \u001b[1;35m<module>\u001b[0m\n    notebook_name='tune_augmentor')\n",
+      "  File \u001b[1;32m\"/home/fytroo/anaconda3/lib/python3.6/site-packages/hyperas/optim.py\"\u001b[0m, line \u001b[1;32m67\u001b[0m, in \u001b[1;35mminimize\u001b[0m\n    verbose=verbose)\n",
+      "  File \u001b[1;32m\"/home/fytroo/anaconda3/lib/python3.6/site-packages/hyperas/optim.py\"\u001b[0m, line \u001b[1;32m96\u001b[0m, in \u001b[1;35mbase_minimizer\u001b[0m\n    model_str = get_hyperopt_model_string(model, data, functions, notebook_name, verbose, stack)\n",
+      "  File \u001b[1;32m\"/home/fytroo/anaconda3/lib/python3.6/site-packages/hyperas/optim.py\"\u001b[0m, line \u001b[1;32m185\u001b[0m, in \u001b[1;35mget_hyperopt_model_string\u001b[0m\n    imports = extract_imports(cleaned_source, verbose)\n",
+      "  File \u001b[1;32m\"/home/fytroo/anaconda3/lib/python3.6/site-packages/hyperas/utils.py\"\u001b[0m, line \u001b[1;32m40\u001b[0m, in \u001b[1;35mextract_imports\u001b[0m\n    tree = ast.parse(source)\n",
+      "\u001b[0;36m  File \u001b[0;32m\"/home/fytroo/anaconda3/lib/python3.6/ast.py\"\u001b[0;36m, line \u001b[0;32m35\u001b[0;36m, in \u001b[0;35mparse\u001b[0;36m\u001b[0m\n\u001b[0;31m    return compile(source, filename, mode, PyCF_ONLY_AST)\u001b[0m\n",
+      "\u001b[0;36m  File \u001b[0;32m\"<unknown>\"\u001b[0;36m, line \u001b[0;32m102\u001b[0m\n\u001b[0;31m    if not os.path.exe\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_run, best_model = optim.minimize(\n",
+    "    model=tune, data=data, algo=tpe.suggest, max_evals=10, trials=Trials(),\n",
+    "    notebook_name='tune_augmentor')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
@@ -42,7 +159,6 @@
    "outputs": [],
    "source": [
     "def data():\n",
-    "    train_dname = '../examples/dataset/brain/train'\n",
     "    test_dname = '../examples/dataset/brain/validation'\n",
     "    df = utils.df_fromdir(train_dname)\n",
     "    df = utils.oversampling_df(df, 80)\n",
@@ -597,29 +713,6 @@
    "source": [
     "with open('cond.json', 'w') as f:\n",
     "    json.dump(best_run, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def gen_p():\n",
-    "    with open('cond.json', 'r') as f:\n",
-    "        conds = json.load(f)\n",
-    "    p = Augmentor.Pipeline()\n",
-    "    p.flip_left_right(probability=0.5)\n",
-    "    if conds['conditional']:\n",
-    "        p.crop_random(probability=1, percentage_area=0.8)\n",
-    "        p.resize(probability=1, width=96, height=96)\n",
-    "    if conds['conditional_1']:\n",
-    "        p.random_erasing(probability=0.5, rectangle_area=0.2)\n",
-    "    if conds['conditional_2']:\n",
-    "        p.shear(probability=0.3, max_shear_left=2, max_shear_right=2) \n",
-    "    return p"
    ]
   },
   {
