--- a/test/test_augment_data.ipynb
+++ b/test/test_augment_data.ipynb
@@ -2,7 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "import net\n",
+    "from tuner.load_data import format_brain, load_fromdf\n",
+    "from tuner.augment_data import augment_dataset\n",
+    "from tuner import utils"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if os.path.exists('brain'):\n",
+    "    shutil.rmtree('brain')\n",
+    "else:\n",
+    "    format_brain('../examples/micin-dataset/brain', 'brain')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -11,26 +40,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/fytroo/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
-      "  return f(*args, **kwds)\n",
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
-   "source": [
-    "from tuner.augment_data import augment_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing PD061.jpg:   0%|          | 0/10 [00:00<?, ? Samples/s]        "
+      "Executing Pipeline:   0%|          | 0/10 [00:00<?, ? Samples/s]          "
      ]
     },
     {
@@ -46,7 +56,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing PS070.jpg:  20%|██        | 2/10 [00:00<00:00, 22.38 Samples/s]"
+      "Processing PS024.jpg:  10%|█         | 1/10 [00:00<00:00, 16.21 Samples/s]"
      ]
     },
     {
@@ -67,7 +77,20 @@
     }
    ],
    "source": [
+    "mkdir\n",
     "augment_dataset('brain', 'new', 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_train, df_val = train_val_split_df(df_fromdir('new'))\n",
+    "x_train, y_train = load_from()"
    ]
   }
  ],
