FIX augmented dir

--- a/test/tune_augmentor.ipynb
+++ b/test/tune_augmentor.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -47,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = utils.df_fromdir('brain')"
@@ -112,7 +116,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from tuner import load_data\n",
