Switch freature/flow-brain

--- a/examples/test.ipynb
+++ b/examples/test.ipynb
@@ -39,8 +39,8 @@
     "df_train = utils.df_fromdir(train_dir)\n",
     "df_test = utils.df_fromdir(train_dir)\n",
     "\n",
-    "x_train, y_train = utils.load_fromdf(df_train)\n",
-    "x_test, y_test = utils.load_fromdf(df_test)\n",
+    "x_train, y_train = load_data.load_fromdf(df_train)\n",
+    "x_test, y_test = load_data.load_fromdf(df_test)\n",
     "y_train = to_categorical(y_train)\n",
     "y_test = to_categorical(y_test)"
    ]
