--- a/test/test_brain_dataset.ipynb
+++ b/test/test_brain_dataset.ipynb
@@ -310,9 +310,9 @@
       "  4: resize = 96 \n",
       "  5: rescale = 1 \n",
       "  6: df = utils.df_fromdir(train_dir)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=resize, rescale=rescale)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=resize, rescale=rescale)\n",
       "  8: df = utils.df_fromdir(test_dir)\n",
-      "  9: x_test, y_test = utils.load_fromdf(df, resize=resize, rescale=rescale)\n",
+      "  9: x_test, y_test = load_data.load_fromdf(df, resize=resize, rescale=rescale)\n",
       " 10: \n",
       " 11: y_train = to_categorical(y_train)\n",
       " 12: y_test = to_categorical(y_test)\n",
@@ -750,9 +750,9 @@
       "  4: resize = 96 \n",
       "  5: rescale = 1 \n",
       "  6: df = utils.df_fromdir(train_dir)\n",
-      "  7: x_train, y_train = utils.load_fromdf(df, resize=resize, rescale=rescale)\n",
+      "  7: x_train, y_train = load_data.load_fromdf(df, resize=resize, rescale=rescale)\n",
       "  8: df = utils.df_fromdir(test_dir)\n",
-      "  9: x_test, y_test = utils.load_fromdf(df, resize=resize, rescale=rescale)\n",
+      "  9: x_test, y_test = load_data.load_fromdf(df, resize=resize, rescale=rescale)\n",
       " 10: \n",
       " 11: y_train = to_categorical(y_train)\n",
       " 12: y_test = to_categorical(y_test)\n",
