--- a/tuner/net.ipynb
+++ b/tuner/net.ipynb
@@ -159,8 +159,8 @@
    },
    "outputs": [],
    "source": [
-    "x_train, y_train = utils.load_fromdf(df_train)\n",
-    "x_test, y_test = utils.load_fromdf(df_test)"
+    "x_train, y_train = load_data.load_fromdf(df_train)\n",
+    "x_test, y_test = load_data.load_fromdf(df_test)"
    ]
   },
   {
