Clear test/test_augment_data

--- a/test/test_augment_data.ipynb
+++ b/test/test_augment_data.ipynb
@@ -2,11 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/fytroo/anaconda3/lib/python3.6/importlib/_bootstrap.py:219: RuntimeWarning: compiletime version 3.5 of module 'tensorflow.python.framework.fast_tensor_util' does not match runtime version 3.6\n",
+      "  return f(*args, **kwds)\n",
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import shutil\n",
@@ -19,19 +29,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "if os.path.exists('brain'):\n",
     "    shutil.rmtree('brain')\n",
     "else:\n",
-    "    format_brain('../examples/micin-dataset/brain', 'brain')"
+    "    format_brain('../micin-dataset/brain', 'brain')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -40,45 +50,64 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Executing Pipeline:   0%|          | 0/10 [00:00<?, ? Samples/s]          "
+      "Processing MS83.jpg:  33%|███▎      | 10/30 [00:00<00:00, 62.14 Samples/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialised with 51 image(s) found.\n",
-      "Output directory set to brain/MS/output.Initialised with 51 image(s) found.\n",
-      "Output directory set to brain/PD/output."
+      "Initialised with 246 image(s) found.\n",
+      "Output directory set to brain/train/output."
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing PS024.jpg:  10%|█         | 1/10 [00:00<00:00, 16.21 Samples/s]"
+      "Processing PD034.jpg:  37%|███▋      | 11/30 [00:00<00:00, 85.90 Samples/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialised with 84 image(s) found.\n",
-      "Output directory set to brain/N/output.Initialised with 80 image(s) found.\n",
-      "Output directory set to brain/PS/output."
+      "Initialised with 20 image(s) found.\n",
+      "Output directory set to brain/validation/output."
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                          \r"
+      "                                                                           \r"
      ]
     }
    ],
    "source": [
-    "mkdir\n",
     "augment_dataset('brain', 'new', 30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_val_split_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-4b6e35a07712>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_val_split_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_fromdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'new'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mload_from\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_val_split_df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_train, df_val = train_val_split_df(df_fromdir('new'))\n",
+    "x_train, y_train = load_from()"
    ]
   },
   {
@@ -88,10 +117,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "df_train, df_val = train_val_split_df(df_fromdir('new'))\n",
-    "x_train, y_train = load_from()"
-   ]
+   "source": []
   }
  ],
  "metadata": {
